# Codex-LLM

./: .env.example  .gitignore  README.md  pyproject.toml
src/llm_agent_starter/: __init__.py  agentic.py  client.py  config.py  demo.py  llm_basic.py  logging_config.py  main.py  reporting.py  tools.py
tests/: conftest.py  test_agentic.py  test_config.py  test_reporting.py  test_tools.py
